--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-insta-stories": "^2.7.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6",
     "sass": "^1.79.4",
     "swiper": "^11.1.12",
     "yandex-maps": "^0.0.1"
