--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0-alpha",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "react-scripts next start --port 8000 ",
+    "start": "next start",
     "lint": "next lint",
     "test": "echo \"Error: tests are not implemented\" && exit 1",
     "deploy": "echo \"Error: deploy scripts are not implemented\" && exit 1"
